WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287988
Fix the logic of resource eligibility check by ResourceMonitoring.
https://bugs.webkit.org/show_bug.cgi?id=287988
Summary
Fix the logic of resource eligibility check by ResourceMonitoring.
Basuke Suzuki
Reported
2025-02-19 11:39:07 PST
If the iframe is not eligible and just uses eligible sub resource, we shouldn't treat the iframe as eligible.
Attachments
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2025-02-19 11:39:25 PST
rdar://145155530
Basuke Suzuki
Comment 2
2025-02-19 13:40:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40891
EWS
Comment 3
2025-02-19 15:58:21 PST
Committed
290660@main
(b73789151968): <
https://commits.webkit.org/290660@main
> Reviewed commits have been landed. Closing PR #40891 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug